<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Created by Ionescu Radu Stefan -->

    <string name="app_name">StegLock</string>

    <!-- EditText Strings -->
    <string name="etUsername">E-mail</string>
    <string name="etPassword">Password</string>
    <string name="etFirstName">First Name</string>
    <string name="etLastName">Last Name</string>
    <string name="etNickname">Nickname</string>
    <string name="etMessage">Type your message here…</string>
    <string name="etPasswordConfirmation">Password confirmation</string>
    <string name="etSearch">Search...</string>
    <string name="etSecretMessage">Input your secret message</string>
    <string name="etEditNickname">New nickname</string>

    <!-- TextView Strings -->
    <string name="tvDont">Don\'t have an account?</string>
    <string name="tvOr">OR</string>
    <string name="tvNickname">Nickname</string>
    <string name="tvEmail">E-mail</string>
    <string name="tvSecretMessage">Secret Message</string>
    <string name="tvCoverImage">Cover Image</string>
    <string name="tvCoverRecording">Cover Recording</string>
    <string name="tvEditNickname">Edit nickname</string>

    <!-- Button Strings -->
    <string name="bLogin">Log in</string>
    <string name="bLoginFB">Log in with Facebook</string>
    <string name="bLoginG">Log in with Google</string>
    <string name="bRegister">Register</string>
    <string name="bLogout">Log out</string>
    <string name="bProfile">My profile</string>
    <string name="bAbout">About StegLock</string>
    <string name="bStartRecord">Start recording</string>
    <string name="bStopRecord">Stop recording</string>
    <string name="bStartPlay">Start playing</string>
    <string name="bStopPlay">Stop playing</string>
    <string name="bChat">Chat</string>
    <string name="bSend">Send</string>
    <string name="bEditNickname">Apply</string>
    <string name="bCancel">Cancel</string>

    <!-- Toast Strings -->
    <string name="tLogSuccess">Logged in as </string>
    <string name="tLogFail">"Incorrect email and/or password!"</string>
    <string name="tLogout">Log out successful!</string>
    <string name="tRegSuccess">, your registration was successful. Please log in!</string>
    <string name="tRegFail">Please fill in correctly the fields with errors!</string>

    <!-- Error Strings -->
    <string name="fnError" tools:ignore="TypographyDashes">First name must begin with uppercase character followed by 1-15 lowercase characters!</string>
    <string name="lnError" tools:ignore="TypographyDashes">Last name must begin with uppercase character followed by 1-15 lowercase characters!</string>
    <string name="eError">Email must be [username]@[server].[server-type/location]!</string>
    <string name="psError" tools:ignore="TypographyDashes">Password must be 10-15 characters long containing at least one lowercase character, one uppercase character, one digit and one special character( @, #, $, % )!</string>
    <string name="cpsError">Password and Password confirmation must be identical!</string>
    <string name="ppError">Profile picture must have at least almost square ratio!</string>
    <string name="nnError">Nickname can contain upper/lower characters, numbers and . or _ special characters!</string>
    <string name="msgError">You can\'t send an empty message</string>

    <!-- ContentDescriptor Strings -->
    <string name="cdProfile">Profile picture</string>
    <string name="cdLogo">StegLock Logo</string>
    <string name="desc">description</string>

    <!-- About Strings -->
    <string name="about1">The main objective of the StegLock mobile application is to secure the communication of sensitive information, interchanged by two parties. Also, the existence of the secret messages should not be detected. The StegLock mobile application works as a simple chat solution, which can be used to send text messages, images and audio recordings, but the multimedia files may contain hidden text messages.</string>
    <string name="about2">The StegLock mobile application can be used as a basic chat application. If the user wants to send multimedia files, he can also choose to embed a secret message into the file. If a secret message is embedded into the sent file, a long press on the image or recording will extract and display the secret message in a dialog.</string>

    <!-- Firebase Strings -->
    <string name="oauth" tools:ignore="MissingTranslation">1068587871489-b5vdetfis6h04rhv6s60n8g43pjtj8sa.apps.googleusercontent.com</string>
    <string name="facebook_app_id">607855729801442</string>
    <string name="fb_login_protocol_scheme">fb607855729801442</string>

</resources>