<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Ionescu Radu Stefan -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:contentDescription="@string/cdLogo"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etUsername"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <Button
                android:id="@+id/bLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bLogin"
                android:background="@drawable/bshape"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tvDont"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bRegister"
                android:background="@drawable/bshape"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tvOr"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bLoginFB"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/fbshape"
                android:drawableStart="@drawable/com_facebook_button_login_logo"
                android:drawableEnd="@drawable/com_facebook_button_login_logo"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawablePadding="10dp"
                android:textColor="@color/com_facebook_button_text_color"
                android:text="@string/bLoginFB"
                android:textAlignment="center" />

            <Button
                android:id="@+id/bLoginG"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gshape"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/common_google_signin_btn_icon_dark"
                android:drawableEnd="@drawable/common_google_signin_btn_icon_dark"
                android:textColor="#000000"
                android:textAlignment="center"
                android:text="@string/bLoginG" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/bFBLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:clickable="false"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>