<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Ionescu Radu Stefan -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bChatMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bChat"
            android:background="@drawable/bshape"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/bProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bProfile"
            android:background="@drawable/bshape"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/bAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bAbout"
            android:background="@drawable/bshape"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/bLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bLogout"
            android:background="@drawable/bshape"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>