<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Ionescu Radu Stefan -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3">

                <EditText
                    android:id="@+id/etProfile2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:visibility="visible"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no"/>

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_row="0"
                    android:layout_marginTop="10dp"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cdProfile"
                    app:srcCompat="@drawable/logo" />

                <EditText
                    android:id="@+id/etProfile"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:visibility="visible"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no"/>

            </GridLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/etNicknameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etNickname"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etFirstName"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etLastName"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etUsername"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etPasswordActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/etPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPasswordConfirmation"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bRegisterActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bRegister"
                android:background="@drawable/bshape"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>